// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helpingHand achievement should add indication if more than one PR reviewer 1`] = `
{
  "avatar": "images/achievements/helpingHandManInBlack.achievement.jpg",
  "description": "Your reviewers reviewer, 2nd committed to your Pull Request",
  "name": "Helping Hand",
  "relatedPullRequest": "test",
  "short": "Look, I don't mean to be rude but this is not as easy as it looks",
}
`;

exports[`helpingHand achievement should add indication if more than one PR reviewer 2`] = `
{
  "avatar": "images/achievements/helpingHandHelloThere.achievement.jpg",
  "description": "You've committed to creator's Pull Request you are reviewing",
  "name": "Helping Hand",
  "relatedPullRequest": "test",
  "short": "Hello there. Slow going?",
}
`;

exports[`helpingHand achievement should add indication if more than one PR reviewer 3`] = `
{
  "avatar": "images/achievements/helpingHandHelloThere.achievement.jpg",
  "description": "You've committed to creator's Pull Request you are reviewing",
  "name": "Helping Hand",
  "relatedPullRequest": "test",
  "short": "Hello there. Slow going?",
}
`;

exports[`helpingHand achievement should be granted if PR reviewer added commit 1`] = `
{
  "avatar": "images/achievements/helpingHandManInBlack.achievement.jpg",
  "description": "Your reviewer reviewer committed to your Pull Request",
  "name": "Helping Hand",
  "relatedPullRequest": "test",
  "short": "Look, I don't mean to be rude but this is not as easy as it looks",
}
`;

exports[`helpingHand achievement should be granted if PR reviewer added commit 2`] = `
{
  "avatar": "images/achievements/helpingHandHelloThere.achievement.jpg",
  "description": "You've committed to creator's Pull Request you are reviewing",
  "name": "Helping Hand",
  "relatedPullRequest": "test",
  "short": "Hello there. Slow going?",
}
`;
